tests/context_clause_mismatch_bad.stderr
tests/context_clause_mismatch_bad.hop:14:16: error: HOP1004: unexpected token
